--- a/Ls.css
+++ b/Ls.css
@@ -18,7 +18,7 @@ h1{
     margin: 0% auto;
     width: 90%;
     color: white;
-    text-shadow: 2px 2px 4px darkblue;
+    text-shadow: 2px 2px 4px gold;
     text-align: center;
     letter-spacing: 2px;
     font-size: 35px;
@@ -26,7 +26,7 @@ h1{
     padding: 5px;
     background-color: rgba(255, 255, 255, 0.096);
     border-radius: 100%;
-    border: 4px solid rgba(212, 187, 140, 0.212);
+    border: 4px solid rgba(139, 0, 42, 0.562);
     box-shadow: 0px 2px 10px rgba(135, 206, 250, 0.445);
     margin-bottom: 10px;
     cursor: pointer;
@@ -36,7 +36,6 @@ body.lightStore h1{
     background-color: rgba(0, 0, 0, 0.39);
     border: 4px solid rgba(255, 217, 0, 0.384);
     box-shadow: 0px 2px 15px black;
-    text-shadow: 2px 2px 4px gold;
 }
 h3{
     color: wheat;
@@ -74,7 +73,7 @@ body.lightStore .product img{
     list-style: none;
     text-decoration: none;
     margin: 0% auto;
-    width: 100%;
+    width: 50%;
     padding: 10px;
     text-align: center;
     justify-content: center;
@@ -82,7 +81,7 @@ body.lightStore .product img{
     background-color: rgba(0, 0, 0, 0.623);
     border-radius: 10px;
     border: 1px solid rgba(255, 217, 0, 0.514);
-    box-shadow: 0px 2px 6px darkgray;
+    box-shadow: 0px 2px 10px darkgray;
 }
 .cart h2{
     color: white;
@@ -93,7 +92,6 @@ body.lightStore .product img{
     color: white;
     text-shadow: 2px 2px 4px darkblue;
     font-size: 20px;
-    margin-bottom: 15px;
 }
 p{
     font-size: 20px;
@@ -110,20 +108,13 @@ p{
     }
     h1{
        margin: 0% auto;
-       font-size: 40px;
-       padding: 5px;
        width: 50%;
        margin-bottom: 15px;
    
    }
    .cart{
-    width: 40%;
+    width: 25%;
    }
-   .quantity-input{
-    margin: 0% auto;
-    min-width: 150px;
-    
-  }
 }
 
 
@@ -132,7 +123,7 @@ p{
     display: block; /* Initially show the cart */
     padding: 20px;
     border: 1px solid #ccc;
-    margin-top: 10px;
+    margin-top: 20px;
   }
   
   /* Hide cart by default */
@@ -142,40 +133,15 @@ p{
   
   /* Style for the "Show/Hide" button */
   #toggle-cart {
-    margin-top: 10px;
+    margin-top: 20px;
     padding: 10px 20px;
-    background-color: blue;
+    background-color: #4CAF50;
     color: white;
     border: none;
-    border-radius: 7px;
-    box-shadow: 0px 2px 10px black;
-    border: 1px solid rgba(255, 217, 0, 0.753);
     cursor: pointer;
-  }
-  body.lightStore #toggle-cart{
-    background-color: #219127;
   }
   
   #toggle-cart:hover {
     background-color: #45a049;
   }
-
-  .remove-item{
-    border: none;
-    padding: 2px 5px;
-    font-size: 12px;
-    border-radius: 6px;
-    background-color: red;
-    color: white;
-  }
-  .quantity-input{
-    margin: 0% auto;
-    border: none;
-    font-size: 15px;
-    text-align: center;
-    padding: 5px;
-    border: 2px solid lightskyblue;
-    border-radius: 6px;
-    width: 50px;
-    
-  }
+  
