--- a/Shopping.css
+++ b/Shopping.css
@@ -70,6 +70,25 @@ body.lightStore .product img{
     border-radius: 6px;
     cursor: pointer;
 }
+#checkout-button{
+    border: none;
+    padding: 6px;
+    color: white;
+    font-size: 15px;
+    background-color: rgb(0, 139, 19);
+    border-radius: 6px;
+    cursor: pointer;
+}
+#checkout-button:hover{
+    background-color: blue;
+    color: white;
+    text-shadow: 2px 2px 4px gold;
+}
+#checkout-button:hover::after{
+    content: "/Now!";
+    display: inline-block;
+    position: relative;
+}
 .cart{
     list-style: none;
     text-decoration: none;
