--- a/Shopping.css
+++ b/Shopping.css
@@ -66,9 +66,14 @@ body.lightStore .product img{
     padding: 6px;
     color: white;
     font-size: 12px;
-    background-color: darkblue;
+    background-color: rgb(0, 139, 19);
     border-radius: 6px;
     cursor: pointer;
+}
+.add-to-cart:hover{
+   background-color: darkgreen;
+   transform: scale(1.05);
+   transition: 0.5s;
 }
 #checkout-button{
     border: none;
@@ -85,7 +90,7 @@ body.lightStore .product img{
     text-shadow: 2px 2px 4px gold;
 }
 #checkout-button:hover::after{
-    content: "/Now!";
+    content: "-Now!";
     display: inline-block;
     position: relative;
 }
@@ -167,16 +172,21 @@ p{
     color: white;
     border: none;
     border-radius: 7px;
-    box-shadow: 0px 2px 10px black;
+    box-shadow: 0px 2px 10px rgba(135, 206, 250, 0.432);
     border: 1px solid rgba(255, 217, 0, 0.753);
     cursor: pointer;
   }
   body.lightStore #toggle-cart{
-    background-color: #219127;
+    background-color: blue;
+    box-shadow: 0px 2px 10px black;
+  }
+  body.lightStore #toggle-cart:hover {
+    background-color: green;
   }
   
+  
   #toggle-cart:hover {
-    background-color: #45a049;
+    background-color: green;
   }
 
   .remove-item{
