--- a/Shopping.css
+++ b/Shopping.css
@@ -41,6 +41,7 @@ body.lightStore h1{
 h3{
     color: wheat;
     text-shadow: 2px 2px 4px darkblue;
+    margin-bottom: 2px;
    
 }
 .product-List{
@@ -56,6 +57,11 @@ h3{
     border: 2px solid yellowgreen;
     padding: 2px;
     border-radius: 15px;
+}
+.product img:hover{
+    transform: scale(1.05);
+    transition: 0.5s;
+    cursor: pointer;
 }
 body.lightStore .product img{
     border: 2px solid rgba(255, 217, 0, 0.616);
@@ -196,6 +202,7 @@ p{
     border-radius: 6px;
     background-color: red;
     color: white;
+    cursor: pointer;
   }
   .quantity-input{
     margin: 0% auto;
