--- a/Shopping.css
+++ b/Shopping.css
@@ -20,6 +20,8 @@ h1{
     color: white;
     text-shadow: 2px 2px 4px darkblue;
     text-align: center;
+    align-items: center;
+    justify-content: center;
     letter-spacing: 2px;
     font-size: 35px;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -32,11 +34,20 @@ h1{
     cursor: pointer;
 
 }
+h1 ion-icon{
+    border-bottom: 1px solid gold;
+}
 body.lightStore h1{
     background-color: rgba(0, 0, 0, 0.39);
     border: 4px solid rgba(255, 217, 0, 0.384);
     box-shadow: 0px 2px 15px black;
     text-shadow: 2px 2px 4px gold;
+    justify-content: center;
+    align-items: center;
+}
+body.lightStore h1 ion-icon{
+    color: rgba(255, 217, 0, 0.486);
+    border-bottom: 2px solid rgba(245, 222, 179, 0.795);
 }
 h3{
     color: wheat;
