--- a/Shopping.css
+++ b/Shopping.css
@@ -124,7 +124,7 @@ body.lightStore .product img{
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.623);
-    border-radius: 10px;
+    border-radius: 50px;
     border: 1px solid rgba(255, 217, 0, 0.514);
     box-shadow: 0px 2px 6px darkgray;
 }
@@ -161,10 +161,10 @@ p{
    
    }
    .cart{
-    width: 60%;
+    max-width: 600px;
    }
    #cart-container{
-    width: 60%;
+    max-width: 600px;
    }
    .quantity-input{
     margin: 0% auto;
