--- a/Shopping.css
+++ b/Shopping.css
@@ -35,7 +35,9 @@ h1{
 
 }
 h1 ion-icon{
-    border-bottom: 1px solid gold;
+    border-bottom: 2px solid wheat;
+    border-radius: 10px;
+    box-shadow: 0px 1px 2px darkgreen;
 }
 body.lightStore h1{
     background-color: rgba(0, 0, 0, 0.39);
@@ -47,7 +49,7 @@ body.lightStore h1{
 }
 body.lightStore h1 ion-icon{
     color: rgba(255, 217, 0, 0.486);
-    border-bottom: 2px solid rgba(245, 222, 179, 0.795);
+    border-bottom: 3px solid rgba(245, 222, 179, 0.795);
 }
 h3{
     color: wheat;
