--- a/Shopping.css
+++ b/Shopping.css
@@ -16,14 +16,14 @@ body.lightStore{
 }
 h1{
     margin: 0% auto;
-    width: 90%;
+    width: 100%;
     color: white;
     text-shadow: 2px 2px 4px darkblue;
     text-align: center;
     align-items: center;
     justify-content: center;
     letter-spacing: 2px;
-    font-size: 35px;
+    font-size: 30px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 5px;
     background-color: rgba(255, 255, 255, 0.096);
@@ -126,14 +126,34 @@ body.lightStore .product img{
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.623);
-    border-radius: 50px;
+    border-radius: 20px;
     border: 1px solid rgba(255, 217, 0, 0.514);
     box-shadow: 0px 2px 6px darkgray;
+    overflow: scroll;
+    height: 30vh;
+}
+.cart::-webkit-scrollbar{
+    width: 10px;
+    height: 0px;
+    background-color: transparent;
+    border-radius: 20px;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    border: none;
+}
+.cart::-webkit-scrollbar-thumb{
+    background-color: blue;
+    border-radius: 20px;
+    width: 10px;
+    height: 0px;
+}
+.cart::-webkit-scrollbar-thumb:hover{
+    background-color: green;
 }
 .cart h2{
     color: white;
     text-shadow: 2px 2px 4px darkblue;
     text-decoration: underline;
+    margin-top: -15px;
 }
 #cart-items{
     color: white;
@@ -158,7 +178,7 @@ p{
        margin: 0% auto;
        font-size: 40px;
        padding: 5px;
-       width: 50%;
+       max-width: 700px;
        margin-bottom: 15px;
    
    }
