--- a/Shopping.css
+++ b/Shopping.css
@@ -70,9 +70,10 @@ h2{
     margin: 0% auto;
     width: 150px;
     height: 150px;
-    border: 2px solid yellowgreen;
+    border: 2px solid lightskyblue;
     padding: 2px;
     border-radius: 15px;
+    box-shadow: 0px 3px 10px white;
 }
 .product img:hover{
     transform: scale(1.05);
@@ -126,7 +127,7 @@ body.lightStore .product img{
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.623);
-    border-radius: 20px;
+    border-radius: 7px;
     border: 1px solid rgba(255, 217, 0, 0.514);
     box-shadow: 0px 2px 6px darkgray;
     overflow: scroll;
@@ -139,9 +140,13 @@ body.lightStore .product img{
     border-radius: 20px;
     border: 2px solid rgba(0, 0, 0, 0.5);
     border: none;
+    box-shadow: 0px 3px 6px lightskyblue;
+}
+body.lightStore .cart::-webkit-scrollbar{
+    box-shadow: 0px 3px 6px yellowgreen;
 }
 .cart::-webkit-scrollbar-thumb{
-    background-color: blue;
+    background-color: rgba(0, 0, 255, 0.795);
     border-radius: 20px;
     width: 10px;
     height: 0px;
