--- a/Shopping.css
+++ b/Shopping.css
@@ -38,6 +38,10 @@ h1 ion-icon{
     border-bottom: 2px solid wheat;
     border-radius: 10px;
     box-shadow: 0px 1px 2px darkgreen;
+    background-image: url(lollipop_3GIF.gif);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 body.lightStore h1{
     background-color: rgba(0, 0, 0, 0.39);
@@ -50,6 +54,7 @@ body.lightStore h1{
 body.lightStore h1 ion-icon{
     color: rgba(255, 217, 0, 0.486);
     border-bottom: 3px solid rgba(64, 64, 250, 0.904);
+   
 }
 h3{
     color: wheat;
@@ -260,3 +265,81 @@ p{
     width: 50px;
     
   }
+
+
+  .container{
+    margin: 0% auto;
+    margin-top: 60px;
+    margin-bottom: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .Box{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    animation: animate 15s linear infinite;
+}
+@keyframes animate {
+    0% {
+        rotate: 0deg;
+    }
+    100% {
+        rotate: 360deg;
+    }
+}
+.container:hover .Box{
+    animation-play-state: paused;
+}
+.img{
+    position: relative;
+    left: -50%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.img .imgBox{
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 2px solid rgba(255, 217, 0, 0.801);
+    transform: rotate(calc(360deg/8 * var(--i)));
+    transform-origin: 190px;
+    box-shadow: 0px 2px 20px blue;
+}
+body.light .img .imgBox{
+    box-shadow: 0px 2px 15px #ff105e;
+    border: 2px solid rgba(255, 217, 0, 0.863);
+}
+
+.img .imgBox img{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    transform: rotate(calc(-360deg/8 * var(--i)));
+    animation: animateimgBox 15s linear infinite;
+}
+
+.container:hover .img .imgBox img{
+    animation-play-state: paused;
+}
+
+@keyframes animateimgBox {
+    0% {
+        rotate: 0deg;
+    }
+    100% {
+        rotate: -360deg;
+    } 
+}
