--- a/Ls2.css
+++ b/Ls2.css
@@ -343,3 +343,33 @@ body.light .img .imgBox{
         rotate: -360deg;
     } 
 }
+h6{
+    position: absolute;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    text-shadow: 2px 2px 4px lightcoral;
+    background-color: rgba(0, 0, 139, 0.603);
+    box-shadow: 0px 3px 15px lightskyblue;
+    padding: 10px 5px;
+    border-radius: 12px;
+    
+}
+body.lightStore h6{
+    box-shadow: 0px 3px 10px black;
+    background-color: rgba(0, 100, 0, 0.664);
+}
+h6 ion-icon{
+    color: rgba(255, 217, 0, 0.596);
+    font-weight: bold;
+    border-bottom: 2px solid gold;
+    box-shadow: 0px 2px 10px #ff1060e8;
+    border-radius: 50px;
+    background-image: url(lollipop_3GIF.gif);
+    background-size: cover;
+    background-position: center;
+}
+body.lightStore h6 ion-icon{
+    box-shadow: 0px 0px 5px pink;
+}
