--- a/Shopping.css
+++ b/Shopping.css
@@ -450,3 +450,73 @@ h6 ion-icon{
 body.lightStore h6 ion-icon{
     box-shadow: 0px 0px 5px pink;
 }
+
+.navigation{
+    margin: 0% auto;
+    margin-top: 5px;
+    width: 100%;
+    display: flex;
+    overflow-x: scroll;
+    border: none;
+    background: transparent;
+  }
+  .navigation::-webkit-scrollbar{
+    width: 0%;
+  }
+  .navigation::-webkit-scrollbar-track {
+    box-shadow: 0px 2px 6px rgba(153, 205, 50, 0.856);
+    border-radius: 10px;
+  }   
+  .navigation::-webkit-scrollbar-thumb{
+    border: 1px solid gold;
+    border-radius: 10px;
+    background: darkblue; 
+    cursor: grab; 
+  }
+  .navigation::-webkit-scrollbar-thumb:hover {
+    background: green;
+    cursor: grab;
+  }
+  .navigation::-webkit-scrollbar-thumb:active{
+    cursor: grabbing;
+  }
+  .navigation .mlb{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid gold;
+    box-shadow: 2px 2px 10px maroon;
+    border-radius: 10px;
+    background-image:url(Shirt1pic.webp);
+    background-position: center;
+    background-size: cover;
+  }
+  .navigation .mlb:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .mlb ion-icon{
+    color: transparent;
+  }
+  .navigation .nba{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid gold;
+    box-shadow: 2px 2px 10px maroon;
+    border-radius: 10px;
+    background-image: url(Shirt2pic.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+  .navigation .nba:hover{
+    color: transparent;
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(0, 0, 0, 0.452); 
+    transform: scale(1.10);
+    transition: 0.5s;
+  }
+  .navigation .nba ion-icon{
+    color: transparent;
+  }
+  
