--- a/Shopping.css
+++ b/Shopping.css
@@ -394,11 +394,12 @@ body.light .img .imgBox{
     border-radius: 50%;
     border: 2px solid rgba(255, 217, 0, 0.801);
     transform: rotate(calc(360deg/8 * var(--i)));
-    transform-origin: 190px;
-    box-shadow: 0px 2px 20px blue;
+    transform-origin: 185px;
+    box-shadow: 0px 2px 8px lightskyblue;
 }
-body.light .img .imgBox{
-    box-shadow: 0px 2px 15px #ff105e;
+body.lightStore .img .imgBox{
+   
+    box-shadow: 0px 2px 8px yellowgreen;
     border: 2px solid rgba(255, 217, 0, 0.863);
 }
 
@@ -430,7 +431,7 @@ h6{
     position: absolute;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
     color: white;
     text-shadow: 2px 2px 4px lightcoral;
     background-color: rgba(0, 0, 139, 0.603);
