--- a/Shopping.css
+++ b/Shopping.css
@@ -221,11 +221,11 @@ p{
     align-items: center;
   }
   .Box{
-    position: relative;
     width: 300px;
     height: 300px;
-    animation: animate 15s linear infinite;
 }
+
+
 @keyframes animate {
     0% {
         rotate: 0deg;
@@ -490,9 +490,26 @@ body.lightStore h6 ion-icon{
 .container:hover .Box{
     animation-play-state: paused;
 }
+
+
+.img .imgBox img{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    transform: rotate(calc(-360deg/8 * var(--i)));
+    animation: animateimgBox 15s linear infinite;
+}
+body.light .img .imgBox{
+    box-shadow: 0px 2px 15px #ff105e;
+    border: 2px solid rgba(255, 217, 0, 0.863);
+}
 .img{
     position: relative;
-    left: -50%;
+    left: -40%;
     width: 100%;
     height: 100%;
     display: flex;
@@ -507,24 +524,8 @@ body.lightStore h6 ion-icon{
     border-radius: 50%;
     border: 2px solid rgba(255, 217, 0, 0.801);
     transform: rotate(calc(360deg/8 * var(--i)));
-    transform-origin: 190px;
-    box-shadow: 0px 2px 20px blue;
-}
-body.light .img .imgBox{
-    box-shadow: 0px 2px 15px #ff105e;
-    border: 2px solid rgba(255, 217, 0, 0.863);
-}
-
-.img .imgBox img{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    transform: rotate(calc(-360deg/8 * var(--i)));
-    animation: animateimgBox 15s linear infinite;
+    transform-origin: 160px;
+    box-shadow: 0px 2px 8px lightskyblue;
 }
 
 .container:hover .img .imgBox img{
@@ -593,7 +594,6 @@ body.light .img .imgBox{
     box-shadow: 0px 2px 8px lightskyblue;
 }
 body.lightStore .img .imgBox{
-   
     box-shadow: 0px 2px 8px yellowgreen;
     border: 2px solid rgba(255, 217, 0, 0.863);
 }
