--- a/Shopping.css
+++ b/Shopping.css
@@ -453,7 +453,7 @@ body.lightStore h6 ion-icon{
     border: 1px solid rgba(255, 217, 0, 0.863);
     box-shadow: 0px 3px 10px black;
     border-radius: 10px;
-    background-image:url(Shirt1pic.webp);
+    background-image:url(G-Shock-Digital-Black-Red-Shock--Watch-Pic7.avif);
     background-position: center;
     background-size: cover;
     cursor: pointer;
@@ -473,7 +473,7 @@ body.lightStore h6 ion-icon{
     border: 2px solid rgba(255, 217, 0, 0.856);
     box-shadow: 0px 3px 10px black;
     border-radius: 10px;
-    background-image: url(Shirt2pic.jpg);
+    background-image: url(V-Code-Lady-Watch-Pic2.avif);
     background-position: center;
     background-size: cover;
     cursor: pointer;
@@ -618,14 +618,11 @@ body.lightStore h6 ion-icon{
     box-shadow: 0px 2px 6px lightskyblue;
     border-radius: 15px;
     letter-spacing: 1px;
-    text-decoration: 1px wavy wheat underline;
   }
   body.lightStore h4{
     border-bottom: 2px solid rgba(153, 205, 50, 0.774);
     box-shadow: 0px 3px 10px black;
     text-shadow: 2px 2px 4px rgba(255, 217, 0, 0.856);
-    text-decoration: 1px wavy rgba(255, 255, 0, 0.842) underline;
     background-color: rgba(0, 0, 0, 0.651);
-
   }
   
