--- a/Ls2.css
+++ b/Ls2.css
@@ -6,17 +6,19 @@
 body{
     flex-direction: column;
     justify-content: center;
-    text-align: center;
     align-items: center;
+    text-align: center;
+    height: auto;
     background: linear-gradient(to right,black,darkblue,maroon,black);
-    padding: 20px;
+    
+  
 }
 body.lightStore{
     background: linear-gradient(to right,black,darkblue,lightgreen,maroon,black);
 }
 h1{
     margin: 0% auto;
-    width: 100%;
+    width: 370px;
     color: white;
     text-shadow: 2px 2px 4px darkblue;
     text-align: center;
@@ -65,45 +67,65 @@ h3{
 h2{
     margin-bottom: 15px;
 }
-.product-List{
+.product-section{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
     padding: 10px;
+    border: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+   
+   
 }
-.product img{
+.product-section img{
     margin: 0% auto;
     width: 150px;
     height: 150px;
     border: 2px solid lightskyblue;
     padding: 2px;
-    border-radius: 15px;
-    box-shadow: 0px 3px 10px white;
+    border-radius: 10px;
+    box-shadow: 0px 2px 6px darkgray;
+    margin: 5px;
 }
-.product img:hover{
+
+.cart-item img {
+    margin: 0% auto;
+    width: 60px;
+    height: 60px;
+    border: 2px solid lightskyblue;
+    padding: 2px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 6px darkgray;
+    margin: 5px;
+}
+.product-section img:hover{
     transform: scale(1.10);
     transition: 0.5s;
     cursor: pointer;
 }
-body.lightStore .product img{
+body.lightStore .product-section img{
     border: 2px solid rgba(255, 217, 0, 0.616);
     box-shadow: 0px 5px 20px black;
 }
-.add-to-cart{
+
+.product-card {
     border: none;
-    padding: 6px;
-    color: white;
-    font-size: 12px;
-    background-color: rgb(0, 139, 19);
-    border-radius: 6px;
-    cursor: pointer;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
 }
-.add-to-cart:hover{
-   background-color: darkgreen;
-   transform: scale(1.05);
-   transition: 0.5s;
+.cart {
+    margin: 0% auto;
+    max-width: 370px;
+    margin-top: 20px;
+    border-top: 2px solid #ddd;
+    padding-top: 10px;
 }
-#checkout-button{
+
+
+
+#checkoutButton{
     border: none;
     padding: 6px;
     color: white;
@@ -112,12 +134,12 @@ body.lightStore .product img{
     border-radius: 6px;
     cursor: pointer;
 }
-#checkout-button:hover{
+#checkoutButton:hover{
     background-color: blue;
     color: white;
     text-shadow: 2px 2px 4px gold;
 }
-#checkout-button:hover::after{
+#checkoutButton:hover::after{
     content: "-Now!";
     display: inline-block;
     position: relative;
@@ -126,7 +148,9 @@ body.lightStore .product img{
     list-style: none;
     text-decoration: none;
     margin: 0% auto;
+    color: wheat;
     width: 100%;
+    font-size: 30px;
     padding: 10px;
     text-align: center;
     justify-content: center;
@@ -165,47 +189,18 @@ body.lightStore .cart::-webkit-scrollbar{
     text-decoration: underline;
     margin-top: -15px;
 }
-#cart-items{
+#cartItems{
     color: white;
     text-shadow: 2px 2px 4px darkblue;
     font-size: 20px;
     margin-bottom: 15px;
 }
-p{
-    font-size: 20px;
+#totalPrice{
+    font-size: 30px;
     margin-bottom: 5px;
     color: white;
     text-shadow: 2px 2px 4px gold;
 }
-@media  (min-width: 768px) {
-    .product-List{
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 40px;
-        padding: 10px;
-    }
-    h1{
-       margin: 0% auto;
-       font-size: 40px;
-       padding: 5px;
-       max-width: 700px;
-       margin-bottom: 15px;
-   
-   }
-   .cart{
-    max-width: 600px;
-    height: 40vh;
-   }
-   #cart-container{
-    max-width: 600px;
-   }
-   .quantity-input{
-    margin: 0% auto;
-    min-width: 150px;
-    
-  }
-}
-
 
 /* Style for the cart container */
 .cart {
@@ -221,7 +216,7 @@ p{
   }
   
   /* Style for the "Show/Hide" button */
-  #toggle-cart {
+  #toggleCartButton {
     margin-top: 10px;
     padding: 10px 20px;
     background-color: blue;
@@ -232,29 +227,26 @@ p{
     border: 1px solid rgba(255, 217, 0, 0.753);
     cursor: pointer;
   }
-  body.lightStore #toggle-cart{
+  body.lightStore #toggleCartButton{
     background-color: blue;
     box-shadow: 0px 2px 10px black;
   }
-  body.lightStore #toggle-cart:hover {
+  body.lightStore #toggleCartButton:hover {
     background-color: green;
   }
   
   
-  #toggle-cart:hover {
+  #toggleCartButton:hover {
     background-color: green;
   }
 
-  .remove-item{
-    border: none;
-    padding: 2px 5px;
-    font-size: 12px;
-    border-radius: 6px;
-    background-color: red;
-    color: white;
-    cursor: pointer;
+
+  #searchInput{
+    margin: 0% auto;
+    padding: 5px;
+    width: 50%;
   }
-  .quantity-input{
+  input{
     margin: 0% auto;
     border: none;
     font-size: 15px;
@@ -263,113 +255,277 @@ p{
     border: 2px solid lightskyblue;
     border-radius: 6px;
     width: 50px;
-    
   }
 
-
-  .container{
+.navigation{
     margin: 0% auto;
-    margin-top: 60px;
-    margin-bottom: 40px;
+    margin-top: 5px;
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    overflow-x: scroll;
+    border: none;
+    background: transparent;
   }
-  .Box{
-    position: relative;
-    width: 300px;
-    height: 300px;
-    animation: animate 15s linear infinite;
-}
-@keyframes animate {
-    0% {
-        rotate: 0deg;
-    }
-    100% {
-        rotate: 360deg;
-    }
-}
-.container:hover .Box{
-    animation-play-state: paused;
-}
-.img{
-    position: relative;
-    left: -50%;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-.img .imgBox{
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    border: 2px solid rgba(255, 217, 0, 0.801);
-    transform: rotate(calc(360deg/8 * var(--i)));
-    transform-origin: 190px;
-    box-shadow: 0px 2px 20px blue;
-}
-body.light .img .imgBox{
-    box-shadow: 0px 2px 15px #ff105e;
-    border: 2px solid rgba(255, 217, 0, 0.863);
-}
-
-.img .imgBox img{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    transform: rotate(calc(-360deg/8 * var(--i)));
-    animation: animateimgBox 15s linear infinite;
-}
-
-.container:hover .img .imgBox img{
-    animation-play-state: paused;
-}
-
-@keyframes animateimgBox {
-    0% {
-        rotate: 0deg;
-    }
-    100% {
-        rotate: -360deg;
-    } 
-}
-h6{
-    position: absolute;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: 20px;
-    color: white;
-    text-shadow: 2px 2px 4px lightcoral;
-    background-color: rgba(0, 0, 139, 0.603);
-    box-shadow: 0px 3px 15px lightskyblue;
-    padding: 10px 5px;
-    border-radius: 12px;
-    
-}
-body.lightStore h6{
+  .navigation::-webkit-scrollbar{
+    width: 0%;
+  }
+  .navigation::-webkit-scrollbar-track {
+    box-shadow: 0px 2px 6px rgba(162, 219, 48, 0.897);
+    border-radius: 10px;
+  }   
+  .navigation::-webkit-scrollbar-thumb{
+    border: 1px solid rgba(255, 217, 0, 0.856);
+    border-radius: 10px;
+    background: rgba(0, 0, 139, 0.562); 
+    cursor: grab; 
+  }
+  .navigation::-webkit-scrollbar-thumb:hover {
+    background: green;
+    cursor: grab;
+  }
+  .navigation::-webkit-scrollbar-thumb:active{
+    cursor: grabbing;
+  }
+  .navigation .mlb{
+    margin: 5px;
+    padding: 50px;
+    border: 1px solid rgba(255, 217, 0, 0.863);
     box-shadow: 0px 3px 10px black;
-    background-color: rgba(0, 100, 0, 0.664);
-}
-h6 ion-icon{
-    color: rgba(255, 217, 0, 0.596);
-    font-weight: bold;
-    border-bottom: 2px solid gold;
-    box-shadow: 0px 2px 10px #ff1060e8;
-    border-radius: 50px;
-    background-image: url(lollipop_3GIF.gif);
-    background-size: cover;
+    border-radius: 10px;
+    background-image:url(G-Shock-Digital-Black-Red-Shock--Watch-Pic7.avif);
     background-position: center;
-}
-body.lightStore h6 ion-icon{
-    box-shadow: 0px 0px 5px pink;
-}
+    background-size: cover;
+    cursor: pointer;
+  }
+  .navigation .mlb:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .mlb ion-icon{
+    color: transparent;
+  }
+  .navigation .nba{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.856);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image: url(V-Code-Lady-Watch-Pic2.avif);
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+  }
+  .navigation .nba:hover{
+    color: transparent;
+    transform: scale(1.10);
+    transition: 0.5s;
+  }
+  .navigation .nba ion-icon{
+    color: transparent;
+  }
+  .navigation .L-Accesories-Nav{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.863);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image:url(AccesoriesPic.png);
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+  }
+  .navigation .L-Accesories-Nav:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .L-Accesories-Nav ion-icon{
+    color: transparent;
+  }
+  .navigation .L-Clothing-Nav{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.856);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image:url(ClothingFashionPic.jpg);
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+  }
+  .navigation .L-Clothing-Nav:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .L-Clothing-Nav ion-icon{
+    color: transparent;
+  }
+  .navigation .L-Shoes-Nav{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.863);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image:url(SHoesStorePic.jpg);
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+  }
+  .navigation .L-Shoes-Nav:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .L-Shoes-Nav ion-icon{
+    color: transparent;
+  }
+  .navigation .L-Sneakers-Nav{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.849);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image:url(SelectSneakersPic.jpg);
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+  }
+  .navigation .L-Sneakers-Nav:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .L-Sneakers-Nav ion-icon{
+    color: transparent;
+  }
+  .navigation .L-Kitchen-Nav{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.856);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image:url(KitchenToolsPic.webp);
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+  .navigation .L-Kitchen-Nav:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .L-Kitchen-Nav ion-icon{
+    color: transparent;
+  }
+  .navigation .L-RealState-Nav{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.856);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image:url(RealStatePic.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+  .navigation .L-RealState-Nav:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .L-RealState-Nav ion-icon{
+    color: transparent;
+  }
+  .navigation .L-Glasses-Nav{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.856);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image:url(GlassesPic.avif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+  .navigation .L-Glasses-Nav:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .L-Glasses-Nav ion-icon{
+    color: transparent;
+  }
+  .navigation .L-Watches-Nav{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.856);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image:url(WatchesLogoPic.webp);
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+  .navigation .L-Watches-Nav:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .L-Watches-Nav ion-icon{
+    color: transparent;
+  }
+  .navigation .L-Men-Fashion-Nav{
+    margin: 5px;
+    padding: 50px;
+    border: 2px solid rgba(255, 217, 0, 0.856);
+    box-shadow: 0px 3px 10px black;
+    border-radius: 10px;
+    background-image:url(MensFashionLogoPic.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+  .navigation .L-Men-Fashion-Nav:hover{
+    box-shadow: 2px 2px 10px lightgreen;
+    background-color: rgba(255, 217, 0, 0.349);  
+    transform: scale(1.10);
+    transition: 0.5s; 
+  }
+  .navigation .L-Men-Fashion-Nav ion-icon{
+    color: transparent;
+  }
+  h4{
+    margin: 0% auto;
+    width: 200px;
+    color: white;
+    text-shadow: 2px 2px 2px darkblue;
+    font-size: 25px;
+    background-color: rgba(0, 0, 0, 0.26);
+    padding: 5px;
+    border-bottom: 2px solid wheat;
+    box-shadow: 0px 2px 6px lightskyblue;
+    border-radius: 15px;
+    letter-spacing: 1px;
+  }
+  body.lightStore h4{
+    border-bottom: 2px solid rgba(153, 205, 50, 0.774);
+    box-shadow: 0px 3px 10px black;
+    text-shadow: 2px 2px 4px rgba(255, 217, 0, 0.856);
+    background-color: rgba(0, 0, 0, 0.651);
+  }
+
+  button{
+    border-radius: 6px;
+    margin: 1px;
+  }
