--- a/Ls2.css
+++ b/Ls2.css
@@ -249,7 +249,7 @@ body.lightStore .cart::-webkit-scrollbar{
     justify-content: center;
     align-items: center;
     padding: 5px;
-    width: 50%;
+    width: 60%;
     border: 2px solid yellowgreen;
     box-shadow: 0px 2px 10px black;
   }
@@ -549,4 +549,16 @@ body.lightStore .cart::-webkit-scrollbar{
     #searchInput{
       width: 30%;
     }
+    .product-section{
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      padding: 20px;
+      gap: 30px;
+      border: none;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+     
+     
+  }
   }
