--- a/Shopping222.css
+++ b/Shopping222.css
@@ -107,6 +107,8 @@ body.lightStore .nav-info a:hover{
   transition: 0.5s;
 
 }
+
+
 .nav-info a:hover{
   border-bottom: 8px solid palevioletred;
   transition: 0.5s;
@@ -196,15 +198,25 @@ body.lightStore #search-input{
   padding: 10px;
 }
 
-
 .product-List .product {
   text-decoration: none;
   transition: 1s;
-  animation: moveNavbar 30s linear infinite;
+  animation: moveNavbar 30s linear infinite; 
+  animation-play-state: running;
+  cursor: pointer;
+
 }
 
 .product-List .product:hover {
   color: #ff5722;
+  transform: scale(1.10);
+  transition: 0.5s;
+  box-shadow: 0px 2px 10px gold;
+  margin: 0% auto;
+  position: relative;
+  display: inline;
+  cursor: pointer;
+ 
 }
 
 @keyframes moveNavbar {
@@ -260,6 +272,7 @@ body.lightStore #search-input{
 .product-List::-webkit-scrollbar-thumb:active{
   cursor: grabbing;
 }
+
 .product img{
     margin: 0% auto;
     width: 150px;
